2004-07-16  Steffen Macke <sdteffen@web.de>

	* shapes/RDP/Makefile.am: Synchronized with 0_94_RELEASE branch

2004-07-14  Lars Clausen  <lars@raeder.dk>

	* doc/diagram.dtd: 
	* doc/sheet.dtd: Move DTD namespace to new site, and syntactic fix.

	* app/grid.c (snap_to_grid): Use diagrams grid setting to
	determine hex grid snap.

	* doc/pl/Makefile.am: Avoid error based on backslash in comment.
	
	* app/interface.h: Avoid multiply defined symbols (#147396)

2004-07-13  Lars Clausen  <lars@raeder.dk>

	* app/paginate_psprint.c (diagram_print_ps): Give usable type for
	signal handler function -- Solaris uses a direct function type
	that's different from what Linux has, but a void * will always
	hold it.

2004-07-13  Steffen Macke <sdteffen@web.de>

	* samples/Istar.dia:
	* samples/KAOS.dia:
	* samples/Jackson.dia: re-added to the CVS as binary files

2004-07-11  Lars Clausen  <lars@raeder.dk>

	* lib/dialibartrenderer.c: 
	* lib/dialibartrenderer.h (struct _DiaLibartRenderer): 
	* lib/object.c: 
	* lib/object.h (OBJECT_COMMON_PROPERTIES): First attempt at actual
	rotation.  Very primitive interface, only rect can rotate, only in
	libart, and there the box collapses:(  But it's progress.

2004-07-10  Lars Clausen  <lars@raeder.dk>
 
	* app/sheets_dialog_callbacks.c (write_user_sheet): 
	* lib/sheet.c (load_register_sheet): Don't introduce double
	slashes in namespace.

	* lib/dia_xml.h (DIA_XML_NAME_SPACE_BASE): Keep consistent with
	old diagrams, or XSLT will barf all over.
	
2004-07-10  Steffen Macke <sdteffen@web.de>

	* makefile.msc: added doc target; updated for 0.94-pre1 release
	* shapes/RDP/place.shape:
	* shapes/RDP/transition.shape: use *.png instead of *.xpm

2004-07-08  Steffen Macke <sdteffen@web.de>

	* plug-ins/wmf/wmf.cpp (UsePen): linewidth is now working for PS_SOLID  

2004-07-05  Hans Breuer  <hans@breuer.org>

	* */*.[hc] */*/*.c : a bunch of changes to make Dia compile with
	-std=c89. Mostly //-comments and M_PI -> G_PI