@@ -1,6 +1,6 @@
 <!ELEMENT sheet (name, description*, contents) >
 <!ATTLIST sheet
-  xmlns CDATA #FIXED 'http://www.lysator.liu.se/~alla/dia/dia-sheet-ns' >
+  xmlns CDATA #FIXED "http://www.gnome.org/projects/dia/dia-sheet-ns" >
 
 <!ELEMENT name (#PCDATA)* >
 
